# Learned-AQP

./: .gitignore  README.md  compose.py  globals.py  net.py  query.py  shuffle.py  train.py
UDF/: CMakeLists.txt  ETEQ.cpp  aqp_TPCH.pt  aqp_synthetic.pt  globals.py  modelscript_TPCH.pt  modelscript_synthetic.pt  myAQP.cpp  net.py  query.py  train.py
